update RESTful api docs.
